--- a/scrapy_demo/scrapy.cfg
+++ b/scrapy_demo/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = demo.settings
+default = scrapy_demo.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = demo
+project = scrapy_demo
